--- a/README.textile
+++ b/README.textile
@@ -7,9 +7,9 @@ h2. Installation
 
 In your terminal go into the Textmate bundles directory:
 
-@cd~/Library/Application Support/TextMate/Bundles@
+@cd ~/Library/Application Support/TextMate/Bundles@
 
-Checkout the bundle from Gitorious or Github:
+Checkout the bundle from Gitorious:
 
 @git clone http://git.gitorious.org/html-ipsum/mainline.git HTML-ipsum.tmbundle@
 
@@ -17,13 +17,18 @@ Or, if you prefer, from Github:
 
 @gitgit clone git://github.com/zmalltalker/html-ipsum.git HTML-ipsum.tmbundle@
 
+You can now enjoy the snippets in Textmate.
 
 h2. Snippets
 
-* Long paragraph: -> longpara
-* Medium paragraph: -> @mediumpara@
-* Unordered list with short items: -> @shortul@
-* Unordered list with long items: -> @longul@
-* Ordered list with short items: -> @shortol@
-* Ordered list with long items: -> @longol@
-* Kitchen sink -> @kitchensink@
+The following snippets are supported (tab trigger in parentheses)
+
+* Long paragraph: (@longpara@)
+* Medium paragraph: (@mediumpara@)
+* Unordered list with short items: (@shortul@)
+* Unordered list with long items: (@longul@)
+* Ordered list with short items: (@shortol@)
+* Ordered list with long items: (@longol@)
+* Kitchen sink (@kitchensink@)
+
+Feel free to clone this project and add your own snippets. I'm sure you've got some great ideas, let's share!
